docs/components/RetrySimulator/retry-simulator.module.css
.retrySimulator {
  border: 0px;
}

.retryRow {
  border: 0;
  background-color: transparent !important;
  display: flex;
}

.retryRow:not(:first-of-type) {
  margin-top: 0.75em;
  border-top: 1px solid #ddd;
  padding-top: 1em;
}

.retryCol {
  border: 0;
  padding-top: 0px !important;
  vertical-align: top;
  flex-grow: 1;
  width: 50%;
}

.retryCol:first-of-type {
  margin-right: 0.25em;
}

.retryCol:not(:first-of-type) {
  margin-left: 0.25em;
}

.scheduleTime {
  padding: 10px;
  padding-top: 15px;
  border: 1px solid #ddd;
  margin-bottom: 15px;
  background-color: #f0f0f0;
}

.retry {
  position: relative;
  padding: 10px;
  padding-top: 15px;
  border: 1px solid #ddd;
  margin-bottom: 15px;
}

.result {
  padding: 5px;
  text-align: center;
  border-radius: 4px;
}

.resultText {
  margin-top: 1em;
  margin-bottom: 1em;
}

.success {
  background-color: #D4EDDC;
}

.fail {
  background-color: #f8d7da;
}

.inputContainer {
  width: 100%;
  content: "";
  clear: both;
  display: table;
}

.numberInputLabel {
  float: left;
  max-width: 69%;
}

.numberInput {
  float: right;
  max-width: 29%;
}

.removeRetry {
  position: absolute;
  right: 1px;
  top: 0px;
  line-height: 1em;
  cursor: pointer;
}

.dropdown {
  padding: 0.25em 0.5em;
  border: 1px solid #ddd;
  background-color: white;
  margin-bottom: 1em;
}

.codeBlock {
  overflow-x: scroll;
}

.parameter {
  padding: 10px;
  padding-top: 15px;
  border: 1px solid #ddd;
  margin-bottom: 15px;
}

.slider {
  width: 100%;
  background: #d3d3d3;
  height: 10px;
  border-radius: 5px;
}

.codeOutputWrap {
  vertical-align: top;
}

.addButton {
  padding: 0.25em 0.5em;
}

